--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Key Bindings
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 set -g prefix C-s
 
@@ -8,4 +8,4 @@ set -g prefix C-s
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "nordtheme/tmux"
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
